RESOLVED FIXED240612
REGRESSION (250635@main): TestWebKitAPI.PushAPI.pushEventsAndInspectedServiceWorker is failing
https://bugs.webkit.org/show_bug.cgi?id=240612
Summary REGRESSION (250635@main): TestWebKitAPI.PushAPI.pushEventsAndInspectedService...
Ryan Haddad
Reported 2022-05-18 16:58:54 PDT
TestWebKitAPI.PushAPI.pushEventsAndInspectedServiceWorker is almost consistently failing on macOS release bots after https://commits.webkit.org/250635@main TestWebKitAPI.PushAPI.pushEventsAndInspectedServiceWorker 2022-05-18 15:05:46.967 com.apple.WebKit.WebContent.Development[79235:185344520] ApplePersistence=NO /Volumes/Data/worker/Apple-Monterey-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/PushAPI.mm:463 Value of: pushMessageSuccessful Actual: false Expected: true https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.PushAPI.pushEventsAndInspectedServiceWorker
Attachments
Radar WebKit Bug Importer
Comment 1 2022-05-18 16:59:19 PDT
Ryan Haddad
Comment 2 2022-05-18 17:00:02 PDT
Before that change, the test appears to have been a flaky failure.
EWS
Comment 3 2022-05-19 08:29:36 PDT
Committed r294482 (250741@main): <https://commits.webkit.org/250741@main> Reviewed commits have been landed. Closing PR #769 and removing active labels.
Alexey Proskuryakov
Comment 4 2022-05-19 19:20:52 PDT
Passing reliably now!
Note You need to log in before you can comment on or make changes to this bug.