REGRESSION (250635@main): TestWebKitAPI.PushAPI.pushEventsAndInspectedServiceWorker is failing https://bugs.webkit.org/show_bug.cgi?id=240612 rdar://problem/93537478

Patch by Youenn Fablet <youennf@gmail.com> on 2022-05-19
Reviewed by Chris Dumez.

The test was failing as the injection of internals in a ServiceWorkerGlobalScope might happen after firing a push event.
To prevent this, we now do the injection by posting a task to the service worker right after starting the service worker thread
instead of after the script has been executed.

* Source/WebCore/workers/service/context/SWContextManager.cpp:

Canonical link: https://commits.webkit.org/250741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294482 268f45cc-cd09-0410-ab3c-d52691b4dbfc